[package]
name = "restorable"
version = "0.1.0"
authors = ["Joris Bayer <joris.bayer@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdf-canvas = "0.6.0"
structopt = "0.3"
